--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <!-- Three columns of text below the carousel -->
             <div class="row">
                 <div class="col-lg-4">
-                    <img class="rounded-circle" src="https://source.unsplash.com/400x300/?technical"
+                    <img class="rounded-circle" src="https://source.unsplash.com/400x300/?product"
                         alt="Generic placeholder image" width="140" height="140"
                         style="text-align: center;margin-left:110px;">
                     <h2 style="text-align: center;">Heading</h2>
@@ -201,7 +201,7 @@
                             »</a></p>
                 </div><!-- /.col-lg-4 -->
                 <div class="col-lg-4">
-                    <img class="rounded-circle" src="https://source.unsplash.com/400x300/?technical"
+                    <img class="rounded-circle" src="https://source.unsplash.com/400x300/?ai"
                         alt="Generic placeholder image" width="140" height="140"
                         style="text-align: center; margin-left:110px">
                     <h2 style="text-align: center;">Heading</h2>
@@ -213,7 +213,7 @@
                             »</a></p>
                 </div><!-- /.col-lg-4 -->
                 <div class="col-lg-4">
-                    <img class="rounded-circle" src="https://source.unsplash.com/400x300/?technical"
+                    <img class="rounded-circle" src="https://source.unsplash.com/400x300/?google"
                         alt="Generic placeholder image" width="140" height="140"
                         style="text-align: center; margin-left:110px;">
                     <h2 style="text-align: center;">Heading</h2>
